<resources>
    <string name="app_name">Crypto Chat v2</string>
    <string name="logo">logo</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have Account</string>
    <string name="button">button</string>
    <string name="log_in_to_account">Log in to Account</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="type_a_message">Type a Message..</string>
    <string name="new_password">New Password</string>
    <string name="search">Search</string>
    <string name="all_contacts">All Contacts</string>
    <string name="no_contacts_yet">No Contacts yet !</string>
    <string name="requests">Requests</string>
    <string name="no_new_requests">No New Requests</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="alert_body">\n Write this somewhere safe. You have to use this code to log back into your account on different device.</string>
    <string name="i_wrote_it_down">I wrote it down</string>
    <string name="encryption">Encryption</string>
    <string name="total_messages">Total Messages</string>
    <string name="key_input">Looks like you are accessing a new account on this device.\nPlease enter the secret key below</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="key">Key</string>
    <string name="pin">pin</string>
</resources>
