<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".ChangePasswordPage">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/passwordClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/logo"
            android:background="#00000000"
            android:src="@drawable/ic_close_white_24dp"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/passwordClose"
            android:layout_toStartOf="@+id/passwordSave"
            android:layout_marginStart="10dp"
            android:padding="3dp"
            android:text="@string/change_password"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            android:transitionName="header"/>

        <ImageButton
            android:id="@+id/passwordSave"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/logo"
            android:background="#00000000"
            android:src="@drawable/ic_check_white_24dp"/>

    </RelativeLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/editProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/headerLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        app:riv_corner_radius="75dp"
        android:src="@drawable/profile_image"/>

    <TextView
        android:id="@+id/editProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfileImage"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/full_name"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/changeProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editProfileName"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeProfileEmail"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:boxStrokeColor="#FFFFFF"
        app:hintTextColor="#CCCCCC"
        android:textColorHint="#CCCCCC"
        app:passwordToggleTint="#CCCCCC"
        app:passwordToggleEnabled="true"
        android:transitionName="password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changePassword"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        app:boxStrokeColor="#FFFFFF"
        app:hintTextColor="#CCCCCC"
        android:textColorHint="#CCCCCC"
        app:passwordToggleTint="#CCCCCC"
        app:passwordToggleEnabled="true"
        android:transitionName="password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/changeConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeNewPassword"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        app:boxStrokeColor="#FFFFFF"
        app:hintTextColor="#CCCCCC"
        android:textColorHint="#CCCCCC"
        app:passwordToggleTint="#CCCCCC"
        app:passwordToggleEnabled="true"
        android:transitionName="password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>