<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".RegistrationPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/regHeaderLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                android:transitionName="transitionLogo"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/regHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_new_account"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:transitionName="header"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/regFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#CCCCCC"
                    android:textColorHint="#CCCCCC"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regFullName"
                    android:hint="@string/email"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#CCCCCC"
                    android:textColorHint="#CCCCCC"
                    android:transitionName="email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regEmail"
                    android:hint="@string/new_password"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#CCCCCC"
                    android:textColorHint="#CCCCCC"
                    app:passwordToggleTint="#CCCCCC"
                    app:passwordToggleEnabled="true"
                    android:transitionName="password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/regConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/regPassword"
                    android:hint="@string/confirm_password"
                    app:boxStrokeColor="#FFFFFF"
                    app:hintTextColor="#CCCCCC"
                    android:textColorHint="#CCCCCC"
                    app:passwordToggleTint="#CCCCCC"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/regSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/regConfirmPassword"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/colorPrimary"
                    android:backgroundTintMode="screen"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:transitionName="button1"/>

                <RelativeLayout
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/round_corners"
                    android:elevation="10dp"
                    android:padding="20dp">

                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/regFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/regSignIn"
                    android:text="@string/already_have_account"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:transitionName="footer"/>

                <ImageButton
                    android:id="@+id/regSignIn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/colorPrimary"
                    android:backgroundTintMode="screen"
                    android:contentDescription="@string/button"
                    android:elevation="4dp"
                    android:foregroundGravity="center"
                    android:transitionName="button2"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>