<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#1A1A1A">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/key_input"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/alertKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="#3A3A3A"
                android:autofillHints=""
                android:hint="@string/pin"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#AAAAAA"
                android:textSize="17sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:padding="3dp">

                <Button
                    android:id="@+id/alertOK"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/alertCancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#2A2A2A"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>