<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corners"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#1A1A1A">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/alertTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/logo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/alert_body"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/alertOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/i_wrote_it_down"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>