<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".RequestPage">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo"
            android:background="#00000000"
            android:src="@drawable/ic_arrow_back_white_24dp"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/close"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:padding="3dp"
            android:text="@string/requests"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:transitionName="header"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout">

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_new_requests"
            android:textColor="#555555"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/requestRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>
                <include layout="@layout/row_shimmer"/>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </RelativeLayout>

</RelativeLayout>